<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/barcode_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            app:drawableLeftCompat="@drawable/bar_code"
            android:drawablePadding="10dp"
            android:text="@string/product_id" />

        <Spinner
            android:visibility="gone"
            android:id="@+id/add_company"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/comapny"
            android:drawableStart="@drawable/comapny"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <Spinner
            android:visibility="gone"
            android:id="@+id/add_store"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/shop"
            android:drawableStart="@drawable/shop"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/add_category"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/category"
            android:drawableStart="@drawable/category"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/add_sub_category"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/category"
            android:drawableStart="@drawable/category"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/user"
            android:drawableStart="@drawable/custom_mail_icon"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/description"
            android:drawableStart="@drawable/description"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_brand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/brand"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/brand"
            android:drawableStart="@drawable/brand"
            android:drawablePadding="10dp"/>

        <Spinner
            android:id="@+id/add_unit_of_sale"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/custom_mail_icon"
            android:drawableStart="@drawable/custom_mail_icon"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <Spinner
            android:id="@+id/add_tax"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/tax"
            android:drawableStart="@drawable/tax"
            android:drawablePadding="10dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/add_product_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/barcode"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/bar_code"
            android:drawableStart="@drawable/bar_code"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_purchase_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/p_price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/pound"
            android:drawableStart="@drawable/pound"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_sale_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/s_price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/pound"
            android:drawableStart="@drawable/pound"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_minimum_stock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/min_stock"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:drawableLeft="@drawable/stock"
            android:drawableStart="@drawable/stock"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/quantity"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:drawableLeft="@drawable/quantity"
            android:drawableStart="@drawable/quantity"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_product_points"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/p_points"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:drawableLeft="@drawable/points"
            android:drawableStart="@drawable/points"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/add_web_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/web_Price"
            android:background="@drawable/custom_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:drawableLeft="@drawable/web"
            android:drawableStart="@drawable/web"
            android:drawablePadding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="Show On Till"/>
            <RadioGroup
                android:id="@+id/show_on_till"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/show_on_till_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/yes"/>

                <RadioButton
                    android:id="@+id/show_on_till_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/no"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="Show On Web"/>

            <RadioGroup
                android:id="@+id/show_on_web"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/show_on_web_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/yes"/>

                <RadioButton
                    android:id="@+id/show_on_web_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/no"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/take_photo"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:background="@drawable/custom_button_bg"
            app:backgroundTint="@color/grey"/>

        <Button
            android:id="@+id/add_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/setting_submit"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_bg"
            app:backgroundTint="@color/orange"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:backgroundTint="@color/white"
            android:text="@string/setting_cancel"
            android:textColor="@color/orange"
            android:layout_marginTop="10dp"
            app:strokeWidth="1dp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/orange"/>

    </LinearLayout>

</ScrollView>